--- a/index.html
+++ b/index.html
@@ -1246,9 +1246,7 @@ function getMonthTxs() {
 }
 
 function formatIDR(n) {
-  if (n >= 1_000_000) return `Rp ${(n/1_000_000).toFixed(1)}jt`;
-  if (n >= 1_000) return `Rp ${(n/1_000).toFixed(0)}rb`;
-  return `Rp ${n.toLocaleString('id-ID')}`;
+  return 'Rp ' + n.toLocaleString('id-ID');
 }
 
 function formatIDRFull(n) {
