--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- PWA: iOS Home Screen -->
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Cuantify">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#0a0a0f">
@@ -66,8 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 32px;
-    padding-top: calc(20px + env(safe-area-inset-top));
+    padding: 16px 20px;
     border-bottom: 1px solid var(--border);
     position: sticky;
     top: 0;
